# Mayastor

./: .gitignore  .gitmodules  Dockerfile  Jenkinsfile  README.md  ci.nix  commitlint.config.js  ide.nix
.github/: bors.toml
.github/workflows/: bdd.yml  image-pr.yml  image.yml  lint.yml  nightly-ci.yml  pr-ci.yml  unit-int.yml
deploy/etcd/: statefulset.yaml
doc/: build-all.md  build.md  contributor.md  csi.md  lvm.md  mayastor-client.md  run.md  test-controller.md  test-extensions.md  test.md
doc/design/: control-plane-behaviour.md  control-plane.md  lvm.md  mayastor.md  public-api.md  rest-authentication.md
doc/design/k8s/: diskpool-cr.md  kubectl-plugin.md
io-engine/: Cargo.toml  local-randrw-0-verify.state
io-engine-bench/: Cargo.toml  build.rs
io-engine-bench/src/: nexus.rs
io-engine-tests/: Cargo.toml
io-engine-tests/io-engine-tests-macros/: Cargo.toml
io-engine-tests/src/: bdev.rs  bdev_io.rs  error_bdev.rs  file_io.rs  fio.rs  lib.rs  nexus.rs  nvme.rs  nvmf.rs  pool.rs  replica.rs  snapshot.rs  test.rs  test_task.rs
io-engine-tests/src/compose/: mod.rs
io-engine-tests/src/compose/rpc/: v0.rs  v1.rs
io-engine/.cargo/: runner.sh
io-engine/examples/lvs-eval/: display.rs  main.rs
io-engine/src/: bdev_api.rs  delay.rs  jsonrpc.rs  logger.rs  persistent_store.rs  pool_backend.rs  replica_backend.rs  sleep.rs
io-engine/src/bdev/: aio.rs  dev.rs  device.rs  ftl.rs  loopback.rs  lvs.rs  malloc.rs  mod.rs  null_bdev.rs  null_ng.rs  nvme.rs  nvmf.rs  nx.rs  uring.rs
io-engine/src/bdev/nexus/: mod.rs  nexus_bdev.rs  nexus_bdev_children.rs  nexus_bdev_error.rs  nexus_bdev_rebuild.rs  nexus_bdev_snapshot.rs  nexus_channel.rs  nexus_child.rs  nexus_io.rs  nexus_io_log.rs  nexus_io_subsystem.rs  nexus_iter.rs  nexus_module.rs  nexus_nbd.rs  nexus_persistence.rs  nexus_share.rs
io-engine/src/bdev/nvmx/: channel.rs  controller.rs  controller_inner.rs  controller_state.rs  device.rs  handle.rs  mod.rs  namespace.rs  poll_group.rs  qpair.rs  snapshot.rs  uri.rs  utils.rs
io-engine/src/bdev/util/: uri.rs
io-engine/src/core/: bdev.rs  block_device.rs  device_events.rs  device_monitor.rs  env.rs  handle.rs  io_device.rs  io_driver.rs  lock.rs  mempool.rs  mod.rs  nic.rs  partition.rs  reactor.rs  runtime.rs  segment_map.rs  share.rs  snapshot.rs  wiper.rs
io-engine/src/core/fault_injection/: bdev_io_injection.rs  fault_method.rs  inject_io_ctx.rs  injection.rs  injection_api.rs  injection_state.rs  mod.rs
io-engine/src/eventing/: clone_events.rs  host_events.rs  io_engine_events.rs  nexus_child_events.rs  nexus_events.rs  pool_events.rs  replica_events.rs  snapshot_events.rs
io-engine/src/grpc/: controller_grpc.rs  mod.rs  server.rs
io-engine/src/grpc/v0/: bdev_grpc.rs  json_grpc.rs  mayastor_grpc.rs  nexus_grpc.rs
io-engine/src/grpc/v1/: bdev.rs  host.rs  json.rs  nexus.rs  pool.rs  replica.rs  snapshot.rs  snapshot_rebuild.rs  stats.rs  test.rs
io-engine/src/grpc/v1/lvm/: mod.rs
io-engine/src/host/: blk_device.rs
io-engine/src/lvm/: cli.rs  error.rs  lv_replica.rs  mod.rs  property.rs  vg_pool.rs
io-engine/src/lvs/: lvol_snapshot.rs  lvs_error.rs  lvs_iter.rs  lvs_lvol.rs  lvs_store.rs  mod.rs
io-engine/src/rebuild/: bdev_rebuild.rs  mod.rs  nexus_rebuild.rs  rebuild_descriptor.rs  rebuild_error.rs  rebuild_instances.rs  rebuild_job.rs  rebuild_job_backend.rs  rebuild_state.rs  rebuild_task.rs  rebuilders.rs  snapshot_rebuild.rs
io-engine/src/store/: etcd.rs  store_defs.rs
io-engine/src/subsys/: mod.rs
io-engine/src/subsys/config/: mod.rs  opts.rs  pool.rs
io-engine/src/subsys/nvmf/: admin_cmd.rs  mod.rs  poll_groups.rs  subsystem.rs  target.rs  transport.rs
io-engine/src/subsys/registration/: mod.rs  registration_grpc.rs
io-engine/tests/: block_device_nvmf.rs  child_size.rs  core.rs  ftl_mount_fs.rs  lock.rs  lock_lba_range.rs  lvs_grow.rs  lvs_import.rs  lvs_limits.rs  lvs_pool.rs  malloc_bdev.rs  memory_pool.rs  mount_fs.rs  nexus_add_remove.rs  nexus_child_location.rs  nexus_child_online.rs  nexus_child_retire.rs  nexus_children_add_remove.rs  nexus_crd.rs  nexus_create_destroy.rs  nexus_fault_injection.rs  nexus_fio.rs  nexus_io.rs  nexus_rebuild.rs  nexus_rebuild_parallel.rs  nexus_rebuild_partial.rs  nexus_rebuild_partial_loop.rs  nexus_rebuild_source.rs  nexus_rebuild_verify.rs  nexus_replica_resize.rs  nexus_restart.rs  nexus_share.rs  nexus_thin.rs  nexus_thin_no_space.rs  nexus_thin_rebuild.rs  nexus_with_local.rs  nvme_device_timeout.rs  nvmf.rs  nvmf_connect.rs  persistence.rs  (+15 more)
jsonrpc/: Cargo.toml
jsonrpc/src/: error.rs  lib.rs  test.rs
libnvme-rs/: Cargo.toml  build.rs
libnvme-rs/src/: error.rs  nvme_tree.rs  nvme_uri.rs
mayastor/src/bdev/: device.rs  mod.rs
mayastor/src/bdev/nvmx/: handle.rs  mod.rs
mayastor/src/core/: env.rs
mayastor/src/grpc/: mayastor_grpc.rs
mayastor/src/lvm/: error.rs  lvm.rs  mod.rs
nix/pkgs/io-engine/: cargo-package.nix  units.nix
scripts/: cargo-test.sh  check-coredumps.sh  ci-report.sh  clean-cargo-tests.sh  grpc-test.sh  pytest-tests.sh  release.sh  rust-linter.sh  rust-style.sh
test/grpc/: package-lock.json  test_common.js
test/python/: local-job-fs-0-verify.state  requirements.txt
test/python/common/: hdl.py  mayastor.py  nvme.py
test/python/cross-grpc-version/nexus/: docker-compose.yml
test/python/cross-grpc-version/pool/: docker-compose.yml  test_bdd_pool.py
test/python/cross-grpc-version/rebuild/: docker-compose.yml
test/python/cross-grpc-version/replica/: docker-compose.yml
test/python/pool/: docker-compose.yml  test_unmap.py
test/python/tests/cli_controller/: docker-compose.yml
test/python/tests/nexus/: docker-compose.yml  test_nexus_rebuild.py  test_nexus_shutdown.py
test/python/tests/nexus_fault/: docker-compose.yml  test_nexus_fault.py
test/python/tests/nexus_multipath/: docker-compose.yml  test_bdd_nexus_multipath.py  test_nexus_multipath.py
test/python/tests/publish/: docker-compose.yml  test_bdd_nexus.py
test/python/tests/replica/: docker-compose.yml
test/python/v1/: hdl.py  mayastor.py
(+4 files in other folders)
