[package]
name = "io-engine-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1.41.0", features = [ "full" ] }
chrono = "0.4.38"
env_logger = "0.11.5"
futures = "0.3.31"
once_cell = "1.20.2"
tonic = "0.12.3"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.18"
url = "2.5.2"
crossbeam = "0.8.4"
uuid = { version = "1.11.0", features = ["v4"] }
run_script = "0.11.0"
io-engine-api = { path = "../utils/dependencies/apis/io-engine" }
io-engine = { path = "../io-engine" }
composer = { path = "../utils/dependencies/composer" }
spdk-rs = { path = "../spdk-rs" }
io-engine-tests = { path = "../io-engine-tests" }
libnvme-rs = { path = "../libnvme-rs", version = "0.1.0" }
criterion = { version = "0.5.1", features = [ "async_tokio" ] }

[[bench]]
name = "nexus"
path = "src/nexus.rs"
harness = false
