[package]
name = "io-engine-tests"
description = "I/O test support library"
version = "0.1.0"
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
async-channel = "2.3.1"
async-task = "4.7.1"
async-trait = "0.1.83"
bincode = "1.3.3"
byte-unit = "5.1.4"
bytes = "1.8.0"
chrono = "0.4.38"
colored_json = "5.0.0"
crossbeam = "0.8.4"
derive_builder = "0.20.2"
etcd-client = "0.14.0"
function_name = "0.3.0"
futures = "0.3.31"
hex = "0.4.3"
http = "1.1.0"
io-uring = "0.7.1"
ioctl-gen = "0.1.1"
jsonrpc = { path = "../jsonrpc"}
lazy_static = "1.5.0"
libc = "0.2.161"
log = "0.4.22"
md5 = "0.7.0"
merge = "0.1.0"
nix = "0.29.0"
once_cell = "1.20.2"
parking_lot = "0.12.3"
pin-utils = "0.1.0"
prost = "0.13.3"
prost-derive = "0.13.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.11.1"
run_script = "0.11.0"
serde_json = "1.0.132"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
signal-hook = "0.3.17"
snafu = "0.8.5"
tonic = "0.12.3"
tower = "0.5.1"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
udev = "0.9.1"
url = "2.5.2"

composer = { path = "../utils/dependencies/composer" }
libnvme-rs = { path = "../libnvme-rs" }
io-engine-api = { path = "../utils/dependencies/apis/io-engine" }
version-info = { path = "../utils/dependencies/version-info", features = ["deps-logs-head"] }
io-engine = { path = "../io-engine" }
io-engine-tests-macros = { path = "./io-engine-tests-macros" }

[dependencies.serde]
features = ["derive"]
version = "1.0.214"

[dependencies.spdk-rs]
path = "../spdk-rs"

[dependencies.sysfs]
path = "../sysfs"

[dependencies.tokio]
features = ["full"]
version = "1.41.0"

[dependencies.uuid]
features = ["v4"]
version = "1.11.0"
