[package]
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"
name = "io-engine"
description = "Engine responsible for managing I/Os"
version = "1.0.0"
default-run = "io-engine-client"

[features]
default = ["spdk-async-qpair-connect"]
io-engine-testing = ["fault-injection"]
extended-tests = [] # Extended I/O engine tests: not intended for daily runs.
fault-injection = [] # Enables fault injection code.
nexus-io-tracing = [] # Enables nexus I/O tracing code.
spdk-async-qpair-connect = [] # Enables async qpair connection.

[[bin]]
name = "io-engine"
path = "src/bin/io-engine.rs"

[[bin]]
name = "spdk"
path = "src/bin/spdk.rs"

[[bin]]
name = "initiator"
path = "src/bin/initiator.rs"

[[bin]]
name = "uring-support"
path = "src/bin/uring-support.rs"

[[bin]]
name = "io-engine-client"
path = "src/bin/io-engine-client/main.rs"

[[bin]]
name = "jsonrpc"
path = "src/bin/jsonrpc.rs"

[[bin]]
name = "casperf"
path = "src/bin/casperf.rs"

[[example]]
name = "lvs-eval"
path = "examples/lvs-eval/main.rs"

[dependencies]
ansi_term = "0.12.1"
async-channel = "2.3.1"
async-task = "4.7.1"
async-trait = "0.1.83"
bit-vec = "0.8.0"
bincode = "1.3.3"
byte-unit = "5.1.4"
bytes = "1.8.0"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["color", "derive", "string", "env"] }
colored_json = "5.0.0"
crossbeam = "0.8.4"
derive_builder = "0.20.2"
env_logger = "0.11.5"
etcd-client = "0.14.0"
function_name = "0.3.0"
futures = "0.3.31"
hex = "0.4.3"
http = "1.1.0"
humantime = "2.1.0"
io-uring = "0.7.1"
ioctl-gen = "0.1.1"
lazy_static = "1.5.0"
libc = "0.2.161"
log = "0.4.22"
md5 = "0.7.0"
merge = "0.1.0"
nix = { version = "0.29.0", default-features = false, features = ["hostname", "net", "socket", "ioctl"] }
once_cell = "1.20.2"
parking_lot = "0.12.3"
pin-utils = "0.1.0"
prost = "0.13.3"
prost-derive = "0.13.3"
rand = "0.8.5"
regex = "1.11.1"
serde_json = "1.0.132"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
signal-hook = "0.3.17"
snafu = "0.8.5"
strum = "0.26"
strum_macros = "0.26"
tonic = "0.12.3"
tower = "0.5.1"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
udev = "0.9.1"
url = "2.5.2"
gettid = "0.1.3"
async-process = { version = "2.3.0" }
rstack = { version = "0.3.3" }
tokio-stream = "0.1.16"
rustls = { version = "0.23.16", default-features = false, features = ["ring"] }
either = "1.13.0"

devinfo = { path = "../utils/dependencies/devinfo" }
jsonrpc = { path = "../jsonrpc" }
io-engine-api = { path = "../utils/dependencies/apis/io-engine" }
spdk-rs = { path = "../spdk-rs" }
sysfs = { path = "../sysfs" }
version-info = { path = "../utils/dependencies/version-info", features = ["deps-logs-head"] }
events-api = { path = "../utils/dependencies/apis/events" }
event-publisher = { path = "../utils/dependencies/event-publisher" }
tracing-filter = { path = "../utils/dependencies/tracing-filter" }

[dependencies.serde]
features = ["derive"]
version = "1.0.214"

[dependencies.tokio]
features = ["full"]
version = "1.41.0"

[dependencies.uuid]
features = ["v4"]
version = "1.11.0"

[dev-dependencies]
assert_matches = "1.5.0"
io-engine-tests = { path = "../io-engine-tests" }
libnvme-rs = { path = "../libnvme-rs", version = "0.1.0" }
prettytable-rs = "0.10.0"
run_script = "0.11.0"
