[package]
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"
name = "jsonrpc"
version = "1.0.0"

[dependencies]
nix = "0.29.0"
serde = "1.0.214"
serde_derive = "1.0.214"
serde_json = "1.0.132"
tonic = "0.12.3"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"

